--- a/package.json
+++ b/package.json
@@ -1,113 +1,114 @@
 {
-    "name": "log-lottery",
-    "private": true,
-    "version": "0.5.0",
-    "type": "module",
-    "license": "MIT",
-    "scripts": {
-        "dev": "vite --host 0.0.0.0",
-        "build": "vue-tsc --noEmit && vite build",
-        "build:pre": "vue-tsc --noEmit && vite build --mode prebuild",
-        "build:file": "vue-tsc --noEmit && vite build --mode file",
-        "tauri": "node ./build/syncVersion.js && tauri",
-        "test": "vitest",
-        "test:ui": "vitest --ui",
-        "preview": "vite preview",
-        "lint": "eslint ./src",
-        "lint:fix": "eslint ./src --fix",
-        "prepare": "husky"
-    },
-    "dependencies": {
-        "@tweenjs/tween.js": "23.1.2",
-        "@vueuse/core": "^14.1.0",
-        "axios": "^1.13.2",
-        "canvas-confetti": "^1.9.4",
-        "class-variance-authority": "^0.7.1",
-        "clsx": "^2.1.1",
-        "dayjs": "^1.11.19",
-        "dexie": "^4.2.1",
-        "github-markdown-css": "^5.8.1",
-        "gsap": "^3.14.2",
-        "localforage": "^1.10.0",
-        "lodash-es": "^4.17.22",
-        "lucide-vue-next": "^0.562.0",
-        "markdown-it": "^14.1.0",
-        "masonry-layout": "^4.2.2",
-        "pinia": "^3.0.4",
-        "pinia-plugin-persist": "^1.0.0",
-        "reka-ui": "^2.7.0",
-        "sparticles": "^1.3.1",
-        "tailwind-merge": "^3.4.0",
-        "three": "0.166.0",
-        "three-css3d": "1.0.6",
-        "uuid": "^13.0.0",
-        "vue": "^3.5.26",
-        "vue-dompurify-html": "^5.3.0",
-        "vue-draggable-plus": "^0.6.0",
-        "vue-i18n": "^11.2.7",
-        "vue-router": "^4.6.4",
-        "vue-sonner": "^2.0.9",
-        "vue-toast-notification": "^3",
-        "vue3-colorpicker": "^2.3.0",
-        "xlsx": "^0.18.5",
-        "zod": "^4.2.1"
-    },
-    "devDependencies": {
-        "@antfu/eslint-config": "^6.7.3",
-        "@eslint/eslintrc": "^3.3.3",
-        "@eslint/js": "^9.39.2",
-        "@iconify-json/ep": "^1.2.3",
-        "@iconify-json/fluent": "^1.2.36",
-        "@tailwindcss/typography": "^0.5.19",
-        "@tailwindcss/vite": "^4.1.18",
-        "@tauri-apps/cli": "^2.9.6",
-        "@testing-library/vue": "^8.1.0",
-        "@types/canvas-confetti": "^1.9.0",
-        "@types/lodash-es": "^4.17.12",
-        "@types/markdown-it": "^14.1.2",
-        "@types/masonry-layout": "^4.2.8",
-        "@types/node": "^25.0.3",
-        "@types/three": "0.166.0",
-        "@typescript-eslint/eslint-plugin": "^8.50.1",
-        "@typescript-eslint/parser": "^8.50.1",
-        "@vitejs/plugin-legacy": "^7.2.1",
-        "@vitejs/plugin-vue": "^6.0.3",
-        "@vitest/ui": "^4.0.16",
-        "@vue/test-utils": "^2.4.6",
-        "@vue/tsconfig": "^0.8.1",
-        "autoprefixer": "^10.4.23",
-        "baseline-browser-mapping": "^2.9.11",
-        "child_process": "^1.0.2",
-        "daisyui": "^5.5.14",
-        "eslint": "^9.39.2",
-        "eslint-plugin-vue": "^10.6.2",
-        "fast-glob": "^3.3.3",
-        "globals": "^16.5.0",
-        "happy-dom": "^20.0.11",
-        "husky": "^9.1.7",
-        "jsdom": "^27.3.0",
-        "path": "^0.12.7",
-        "postcss": "^8.5.6",
-        "rollup-plugin-visualizer": "^6.0.5",
-        "sass": "^1.97.1",
-        "sass-loader": "^16.0.6",
-        "tailwindcss": "^4.1.18",
-        "terser": "^5.44.1",
-        "tw-animate-css": "^1.4.0",
-        "typescript": "~5.9.3",
-        "unplugin-auto-import": "^20.3.0",
-        "unplugin-icons": "^22.5.0",
-        "unplugin-vue-components": "^30.0.0",
-        "vite": "^7.3.0",
-        "vite-plugin-compression": "^0.5.1",
-        "vite-plugin-inspect": "^11.3.3",
-        "vite-plugin-svg-icons": "^2.0.1",
-        "vite-plugin-vue-devtools": "^8.0.5",
-        "vitest": "^4.0.16",
-        "vue-tsc": "^3.2.1"
-    },
-    "engines": {
-        "node": ">=22.x"
-    },
-    "packageManager": "pnpm@10.26.1"
+  "name": "log-lottery",
+  "private": true,
+  "version": "0.5.2",
+  "type": "module",
+  "license": "MIT",
+  "scripts": {
+    "dev": "vite --host 0.0.0.0",
+    "build": "vue-tsc --noEmit && vite build",
+    "build:pre": "vue-tsc --noEmit && vite build --mode prebuild",
+    "build:file": "vue-tsc --noEmit && vite build --mode file",
+    "tauri": "node ./build/syncVersion.js && tauri",
+    "update-version": "node ./build/updateVersion.js",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "preview": "vite preview",
+    "lint": "eslint ./src",
+    "lint:fix": "eslint ./src --fix",
+    "prepare": "husky"
+  },
+  "dependencies": {
+    "@tweenjs/tween.js": "23.1.2",
+    "@vueuse/core": "^14.1.0",
+    "axios": "^1.13.2",
+    "canvas-confetti": "^1.9.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "dayjs": "^1.11.19",
+    "dexie": "^4.2.1",
+    "github-markdown-css": "^5.8.1",
+    "gsap": "^3.14.2",
+    "localforage": "^1.10.0",
+    "lodash-es": "^4.17.22",
+    "lucide-vue-next": "^0.562.0",
+    "markdown-it": "^14.1.0",
+    "masonry-layout": "^4.2.2",
+    "pinia": "^3.0.4",
+    "pinia-plugin-persist": "^1.0.0",
+    "reka-ui": "^2.7.0",
+    "sparticles": "^1.3.1",
+    "tailwind-merge": "^3.4.0",
+    "three": "0.166.0",
+    "three-css3d": "1.0.6",
+    "uuid": "^13.0.0",
+    "vue": "^3.5.26",
+    "vue-dompurify-html": "^5.3.0",
+    "vue-draggable-plus": "^0.6.0",
+    "vue-i18n": "^11.2.7",
+    "vue-router": "^4.6.4",
+    "vue-sonner": "^2.0.9",
+    "vue-toast-notification": "^3",
+    "vue3-colorpicker": "^2.3.0",
+    "xlsx": "^0.18.5",
+    "zod": "^4.2.1"
+  },
+  "devDependencies": {
+    "@antfu/eslint-config": "^6.7.3",
+    "@eslint/eslintrc": "^3.3.3",
+    "@eslint/js": "^9.39.2",
+    "@iconify-json/ep": "^1.2.3",
+    "@iconify-json/fluent": "^1.2.36",
+    "@tailwindcss/typography": "^0.5.19",
+    "@tailwindcss/vite": "^4.1.18",
+    "@tauri-apps/cli": "^2.9.6",
+    "@testing-library/vue": "^8.1.0",
+    "@types/canvas-confetti": "^1.9.0",
+    "@types/lodash-es": "^4.17.12",
+    "@types/markdown-it": "^14.1.2",
+    "@types/masonry-layout": "^4.2.8",
+    "@types/node": "^25.0.3",
+    "@types/three": "0.166.0",
+    "@typescript-eslint/eslint-plugin": "^8.50.1",
+    "@typescript-eslint/parser": "^8.50.1",
+    "@vitejs/plugin-legacy": "^7.2.1",
+    "@vitejs/plugin-vue": "^6.0.3",
+    "@vitest/ui": "^4.0.16",
+    "@vue/test-utils": "^2.4.6",
+    "@vue/tsconfig": "^0.8.1",
+    "autoprefixer": "^10.4.23",
+    "baseline-browser-mapping": "^2.9.11",
+    "child_process": "^1.0.2",
+    "daisyui": "^5.5.14",
+    "eslint": "^9.39.2",
+    "eslint-plugin-vue": "^10.6.2",
+    "fast-glob": "^3.3.3",
+    "globals": "^16.5.0",
+    "happy-dom": "^20.0.11",
+    "husky": "^9.1.7",
+    "jsdom": "^27.3.0",
+    "path": "^0.12.7",
+    "postcss": "^8.5.6",
+    "rollup-plugin-visualizer": "^6.0.5",
+    "sass": "^1.97.1",
+    "sass-loader": "^16.0.6",
+    "tailwindcss": "^4.1.18",
+    "terser": "^5.44.1",
+    "tw-animate-css": "^1.4.0",
+    "typescript": "~5.9.3",
+    "unplugin-auto-import": "^20.3.0",
+    "unplugin-icons": "^22.5.0",
+    "unplugin-vue-components": "^30.0.0",
+    "vite": "^7.3.0",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-inspect": "^11.3.3",
+    "vite-plugin-svg-icons": "^2.0.1",
+    "vite-plugin-vue-devtools": "^8.0.5",
+    "vitest": "^4.0.16",
+    "vue-tsc": "^3.2.1"
+  },
+  "engines": {
+    "node": ">=22.x"
+  },
+  "packageManager": "pnpm@10.26.1"
 }
